--- a/explorations/exploration1.jade
+++ b/explorations/exploration1.jade
@@ -1,8 +1,12 @@
-div
-  h1 Ocean's Eleven
-  ul
-    li Comedy
-    li Thriller
-  p.
-    Danny Ocean and his eleven accomplices plan to rob
-    three Las Vegas casinos simultaneously.
+doctype html
+html (lang="en")
+
+body
+    div
+      h1 Ocean's Eleven
+      ul
+        li Comedy
+        li Thriller
+      p.
+        Danny Ocean and his eleven accomplices plan to rob
+        three Las Vegas casinos simultaneously.
