what does the HTML look like

--- a/explorations/exploration1.jade
+++ b/explorations/exploration1.jade
@@ -3,7 +3,7 @@ html (lang="en")
 
 body
     div
-      h1 Ocean's Eleven
+      h1 Xavier's Jade Exploration
       ul
         li Comedy
         li Thriller
