last commit for exploration

--- a/explorations/exploration1.jade
+++ b/explorations/exploration1.jade
@@ -1,12 +1,12 @@
 doctype html
 html (lang="en")
-
+head
+title Exploration 1: Jade
 body
     div
       h1 Xavier's Jade Exploration
       ul
-        li Comedy
-        li Thriller
+        li Jade
+        li Makes HTML so much easier
       p.
-        Danny Ocean and his eleven accomplices plan to rob
-        three Las Vegas casinos simultaneously.
+        You can program the exact same thing in JADE as you do in HTML without all the extra tags!
